--- a/content/posts/ctf/2023年第二届陇剑杯部分题解.md
+++ b/content/posts/ctf/2023年第二届陇剑杯部分题解.md
@@ -350,47 +350,21 @@ print(decrypt(encrypted_text, key, iv))
 
 ![image-20230827154235161](https://21r000-image.oss-cn-shanghai.aliyuncs.com/2023/image-20230827154235161.png)
 
+## BF
 
+### baby_forensics_1
 
+vol读取内存文件后导出
 
+![image-20230828133058585](https://21r000-image.oss-cn-shanghai.aliyuncs.com/2023/image-20230828133058585.png)
 
+文本编辑器打开得到编码
 
+![image-20230828133038885](https://21r000-image.oss-cn-shanghai.aliyuncs.com/2023/image-20230828133038885.png)
 
+ROT47解码得到flag
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+![image-20230828132955538](https://21r000-image.oss-cn-shanghai.aliyuncs.com/2023/image-20230828132955538.png)
 
 
 
